Se dieron valores; añadí variable, se borrarón líneas, usé List.of()